--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     </header>
 
         <form class="newTask">
-            <input type="text" class="js-task" placeholder="Nueva tarea">
-            <button class="btnTask">Agregar</button>
+            <input type="text" class="js-new-task" placeholder="Nueva tarea">
+            <button class=" btnTask js-btn-task" type="button">Agregar</button>
         </form>
+
         <form class="search">
-            <input type="text" class="js-list" placeholder="Ejemplo: Comprar pan">
-            <ul class="js-tasks"></ul>
-            <button class="js-btn">Buscar</button>
+            <input type="text" class="js-search" placeholder="Ejemplo: Comprar pan">
+            <button class="js-btn-search" type="button">Buscar</button>
         </form>
+
+        <ul class="js-tasks"></ul>
     </div>
     <script src="./js/task.js"></script>
 </body>
